--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bulma": "^0.9.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^16.13.1",
@@ -18,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css-build": "node-sass --omit-source-map-url ./src/styles/bulma.scss ./src/styles/bulma.css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "bulma": "^0.9.3",
     "sass-loader": "^12.1.0"
   }
 }
