--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "file-saver": "^2.0.5",
     "firebase": "^8.9.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
